// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewCopyJob should handle special characters in database and container names 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField84"
              type="text"
              value="job-with@special#chars_123"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      Test Subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      test-account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone91"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header90-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header90-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header90-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header90-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header90-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header90-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header90-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header90-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header90-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header90-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header90-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header90-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone92"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone95"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row93-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              test-db_with@special#chars
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              test-container_with@special#chars
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-db_with@special#chars
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container_with@special#chars
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render component with cross-subscription setup 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField96"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      Test Subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      test-account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone103"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header102-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header102-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header102-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header102-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header102-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header102-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header102-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header102-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header102-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header102-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header102-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header102-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone104"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone107"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row105-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-container
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render with default state and empty job name 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField0"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      Test Subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      test-account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone7"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header6-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header6-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header6-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header6-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header6-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header6-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header6-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header6-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header6-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header6-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header6-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header6-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone8"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone11"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row9-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-container
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render with long subscription and account names 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField60"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      This is a very long subscription name that might cause display issues if not handled properly
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      this-is-a-very-long-database-account-name-that-might-cause-display-issues
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone67"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header66-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header66-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header66-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header66-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header66-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header66-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header66-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header66-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header66-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header66-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header66-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header66-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone68"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone71"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row69-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              long-database-name-for-testing-purposes
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              long-container-name-for-testing-purposes
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render with missing source account information 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField36"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      Test Subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone43"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header42-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header42-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header42-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header42-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header42-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header42-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header42-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header42-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header42-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header42-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header42-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header42-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone44"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone47"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row45-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-container
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render with missing source subscription information 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField24"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      test-account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone31"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header30-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header30-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header30-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header30-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header30-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header30-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header30-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header30-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header30-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header30-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header30-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header30-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone32"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone35"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row33-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-container
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render with online migration type 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField72"
              type="text"
              value="online-migration-job"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      Test Subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      test-account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone79"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header78-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header78-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header78-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header78-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header78-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header78-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header78-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header78-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header78-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header78-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header78-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header78-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone80"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone83"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row81-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-container
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render with pre-filled job name 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField12"
              type="text"
              value="custom-job-name-123"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      Test Subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      test-account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone19"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header18-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header18-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header18-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header18-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header18-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header18-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header18-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header18-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header18-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header18-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header18-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header18-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone20"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone23"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row21-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              source-container
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-database
                            </div>
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            >
                              target-container
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCopyJob should render with undefined database and container names 1`] = `
<div
  class="ms-Stack previewCopyJobContainer css-109"
>
  <div
    class="ms-Stack flex-row css-110"
  >
    <div
      class="ms-StackItem flex-fixed-width css-111"
    >
      <label
        class="field-label "
      >
        Job name
        : 
      </label>
    </div>
    <div
      class="ms-StackItem flex-grow-col css-111"
    >
      <div
        class="ms-TextField root-113"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-114"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-115"
              id="TextField48"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source subscription
    </span>
    <span
      class="css-125"
    >
      Test Subscription
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <span
      class="bold css-125"
    >
      Source account
    </span>
    <span
      class="css-125"
    >
      test-account
    </span>
  </div>
  <div
    class="ms-Stack css-124"
  >
    <div
      class="ms-Viewport"
      style="min-width: 1px; min-height: 1px;"
    >
      <div
        class="ms-DetailsList is-horizontalConstrained root-126"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount="4"
          aria-rowcount="2"
          role="grid"
        >
          <div
            class="ms-DetailsList-headerWrapper"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-144 ms-DetailsHeader root-128"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone55"
              data-tabster="{"uncontrolled": {}}"
              role="row"
            >
              <div
                aria-labelledby="header54-sourcedbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcedbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="0"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header54-sourcedbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header54-sourcedbname-name"
                    >
                      Source Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header54-sourcecolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="sourcecolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header54-sourcecolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header54-sourcecolname-name"
                    >
                      Source Container
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header54-targetdbname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetdbname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header54-targetdbname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header54-targetdbname-name"
                    >
                      Destination Database
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-labelledby="header54-targetcolname-name"
                aria-sort="none"
                class="ms-DetailsHeader-cell is-actionable root-145"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable="false"
                data-is-focusable="true"
                data-item-key="targetcolname"
                draggable="false"
                role="columnheader"
                style="width: 150px;"
                tabindex="-1"
              >
                <span
                  class="cellTooltip-153"
                >
                  <span
                    class="ms-DetailsHeader-cellTitle cellTitle-151"
                    id="header54-targetcolname"
                  >
                    <span
                      class="ms-DetailsHeader-cellName cellName-152"
                      id="header54-targetcolname-name"
                    >
                      Destination Container
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ms-DetailsList-contentWrapper"
            role="presentation"
          >
            <div
              class="ms-SelectionZone"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-144 focusZone-127"
                data-focuszone-id="FocusZone56"
                data-tabster="{"uncontrolled": {}}"
              >
                <div
                  class="ms-List"
                  role="presentation"
                >
                  <div
                    class="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      class="ms-List-page"
                      role="presentation"
                    >
                      <div
                        class="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index="0"
                        role="presentation"
                      >
                        <div
                          aria-rowindex="2"
                          aria-selected="false"
                          class="ms-FocusZone css-144 ms-DetailsRow is-contentUnselectable root-159"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone59"
                          data-is-focusable="true"
                          data-item-index="0"
                          data-selection-index="0"
                          data-selection-touch-invoke="true"
                          data-tabster="{"uncontrolled": {}}"
                          id="row57-0"
                          role="row"
                          tabindex="0"
                        >
                          <div
                            class="ms-DetailsRow-fields fields-165"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcedbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            />
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="sourcecolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            />
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetdbname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            />
                            <div
                              class="ms-DetailsRow-cell cell-162 cellUnpadded-160"
                              data-automation-key="targetcolname"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style="width: 150px;"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
